--- a/src/App.css
+++ b/src/App.css
@@ -30,14 +30,23 @@ h3 {
 	margin: 0 auto;
 	/* padding: 20px; */
 }
+/* NAVBAR */
 .menubar {
-	margin: 4em 0;
+	text-align: center;
+	margin: 20px 0;
 	padding: 0;
 	width: 200px;
-	/* background-color: #3a3939; */
-	position: fixed;
-	height: 100%;
+	height: auto;
 	overflow: auto;
+	position: fixed;
+}
+
+.nav-picture {
+	width: 80px;
+	height: 80px;
+	margin: 0;
+	border-radius: 50%;
+	border: 2px solid var(--head-color);
 }
 .menulink {
 	display: block;
@@ -51,10 +60,15 @@ h3 {
 	color: white;
 	border-radius: 7px;
 }
+/* SINGLE PAGES BODY */
 .content {
+	/* border-left: 1px solid #f0a202; */
+	border-width: 1px;
+	border-style: solid;
+	border-image: linear-gradient(#30292f, var(--head-color), #30292f) 1 0 0 1;
 	margin-left: 200px;
 	padding: 1px 16px;
-	height: 1000px;
+	height: 100vh;
 }
 @media screen and (max-width: 700px) {
 	.menubar {
@@ -64,12 +78,19 @@ h3 {
 		display: flex;
 		justify-content: center;
 		margin: 0.5em 0;
+		border-width: 1px;
+		border-style: solid;
+		border-image: linear-gradient(90deg, #30292f, var(--head-color), #30292f) 0 1 100%;
+	}
+	.nav-picture {
+		display: none;
 	}
 	/* .menulink {
 		float: left;
 	} */
 	.content {
 		margin-left: 0;
+		border: none;
 	}
 }
 
