--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 :root {
 	--bg-color: #30292f;
 	/* --txt-color: #daddd8; */
-	--txt-color: #d2d2d2;
+	--txt-color: #a9a8a8;
 	/* --head-color: #e98a15; */
 	--head-color: #f0a202;
 }
@@ -12,9 +12,10 @@ body {
 	padding: 0;
 	background-color: var(--bg-color);
 	color: var(--txt-color);
-	font-size: 16px;
+	font-size: clamp(1rem, 0.455vw + 0.886rem, 1.25rem);
+	line-height: clamp(1.3rem, 0.818vw + 1.095rem, 1.75rem);
 	font-weight: 300;
-	font-family: POPPINS, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+	font-family: Poppins, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
 		"Open Sans", "Helvetica Neue", sans-serif;
 }
 h1,
@@ -55,21 +56,37 @@ h3 {
 	padding: 16px;
 	text-decoration: none;
 	text-align: center;
+	overflow: auto;
 }
 .menulink:hover {
 	background-color: #3a3939;
-	color: white;
+	color: rgb(218, 218, 218);
 	border-radius: 7px;
 }
 /* SINGLE PAGES BODY */
 .content {
 	/* border-left: 1px solid #f0a202; */
+
 	border-width: 1px;
 	border-style: solid;
 	border-image: linear-gradient(#30292f, var(--head-color), #30292f) 1 0 0 1;
 	margin-left: 200px;
+	margin-bottom: 3rem;
 	padding: 1px 16px;
-	height: 100vh;
+	height: auto;
+}
+
+/* HOME CONTENT */
+/* Blockquote */
+/* see to clamp text */
+.quote {
+	font-size: clamp(1.875rem, 1.818vw + 1.42rem, 2.875rem);
+	line-height: clamp(2.438rem, 2.886vw + 1.716rem, 4.025rem);
+	font-weight: 900;
+	text-align: center;
+}
+.quote strong {
+	color: var(--head-color);
 }
 @media screen and (max-width: 700px) {
 	.menubar {
@@ -92,23 +109,8 @@ h3 {
 	.content {
 		margin-left: 0;
 		border: none;
+		text-align: justify;
 	}
-}
-/* HOME CONTENT */
-/* Blockquote */
-.quote {
-	font-size: 2.5em;
-	font-weight: 900;
-	text-align: center;
-}
-.quote q {
-	background: -webkit-linear-gradient(90deg, #676464, #ffffff);
-	background-clip: content-box;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-.home-content strong {
-	color: var(--head-color);
 }
 @media screen and (max-width: 400px) {
 	.menubar {
