--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /** @format */
 :root {
-	--bg-color: #30292f;
+	/* --bg-color: #30292f; */
+	--bg-color: #141e27;
 	/* --txt-color: #daddd8; */
 	--txt-color: #a9a8a8;
 	/* --head-color: #e98a15; */
