--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,10 @@
 	--bg-color: #141e27;
 	/* --txt-color: #daddd8; */
 	--txt-color: #a9a8a8;
-	/* --head-color: #e98a15; */
-	--head-color: #f0a202;
+
+	/* --head-color: #f0a202; */
+	--head-color: #fd7e14;
+	--card-color: #25313b;
 }
 
 body {
@@ -94,14 +96,17 @@ h3 {
 /* Grid container */
 .parent-container {
 	display: grid;
-	grid-auto-columns: 1fr;
-	grid-auto-rows: 1fr;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr;
-	gap: 10px 10px;
-	grid-template-areas: ". .";
-	justify-items: center;
-	align-items: baseline;
+	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+	gap: 10px;
+	justify-content: space-evenly;
+}
+.card-container {
+	list-style: none;
+	font-size: 1rem;
+	background-color: var(--card-color);
+	border-radius: 7px;
+	padding: 1rem;
+	line-height: 130%;
 }
 
 @media screen and (max-width: 700px) {
