--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,8 @@ h3 {
 	overflow: auto;
 }
 .menulink:hover {
-	background-color: #3a3939;
-	color: rgb(218, 218, 218);
+	background-color: var(--card-color);
+	color: var(--txt-color);
 	border-radius: 7px;
 }
 /* SINGLE PAGES BODY */
@@ -96,11 +96,13 @@ h3 {
 
 /* PROJECTS PAGE */
 /* Grid container */
-.parent-container {
+
+.projects-section-container {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
 	column-gap: 0.7rem;
 	justify-content: flex-start;
+	min-height: fit-content;
 }
 .card-container {
 	list-style: none;
@@ -109,6 +111,37 @@ h3 {
 	border-radius: 7px;
 	padding: 1rem;
 	line-height: 130%;
+	text-align: center;
+
+	align-items: center;
+}
+.card-container div {
+	margin: 1.3rem 0 0;
+}
+.card-container a {
+	text-decoration: none;
+}
+
+.card-container i {
+	/* border: 1px solid yellow; */
+	color: var(--head-color);
+	position: relative;
+	top: 0.2rem;
+	left: 0.4rem;
+}
+.card-container .subtitle {
+	font-size: 0.7rem;
+	margin-top: -1rem;
+}
+.tag {
+	display: inline-block;
+	border-radius: 3px;
+	padding: 0.2em 0.5em;
+	background: var(--bg-color);
+	color: var(--head-color);
+	font-weight: 300;
+	font-size: 0.8rem;
+	margin: 0.13rem;
 }
 
 /* ------CONTACT PAGE-------- */
