Before publishing in github pages. Minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@ h3 {
 	padding-bottom: 0.5em;
 	color: var(--head-color);
 }
+strong {
+	color: var(--head-color);
+}
 .app-container {
 	display: flex;
 	flex-direction: column;
