--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@ body {
 	font-size: clamp(1rem, 0.455vw + 0.886rem, 1.25rem);
 	line-height: clamp(1.3rem, 0.818vw + 1.095rem, 1.75rem);
 	font-weight: 300;
-	font-family: Poppins, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-		"Open Sans", "Helvetica Neue", sans-serif;
+	font-family: Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+		"Helvetica Neue", sans-serif;
 }
 h1,
 h2,
