--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 	/* --bg-color: #30292f; */
 	--bg-color: #141e27;
 	/* --txt-color: #daddd8; */
-	--txt-color: #a9a8a8;
+	--txt-color: #e9e3e3;
 
 	/* --head-color: #f0a202; */
 	--head-color: #fd7e14;
@@ -17,7 +17,7 @@ body {
 	padding: 0;
 	background-color: var(--bg-color);
 	color: var(--txt-color);
-	font-size: clamp(1rem, 0.455vw + 0.886rem, 1.25rem);
+	font-size: clamp(1rem, 0.455vw + 0.886rem, 1.1rem);
 	line-height: clamp(1.3rem, 0.818vw + 1.095rem, 1.75rem);
 	font-weight: 300;
 	font-family: Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
