changed about name for career in navbar. Minor text changes in About section

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 	/* --bg-color: #30292f; */
 	--bg-color: #141e27;
 	/* --txt-color: #daddd8; */
-	--txt-color: #e9e3e3;
+	--txt-color: #f7f6f6;
 
 	/* --head-color: #f0a202; */
 	--head-color: #fd7e14;
