--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 	/* --bg-color: #30292f; */
 	--bg-color: #141e27;
 	/* --txt-color: #daddd8; */
-	--txt-color: #f7f6f6;
+	--txt-color: #d5d1d1;
 
 	/* --head-color: #f0a202; */
 	--head-color: #fd7e14;
@@ -17,7 +17,8 @@ body {
 	padding: 0;
 	background-color: var(--bg-color);
 	color: var(--txt-color);
-	font-size: clamp(1rem, 0.455vw + 0.886rem, 1.1rem);
+	font-size: 1rem;
+	font-size: clamp(0.8rem, 0.455vw + 0.886rem, 1rem);
 	line-height: clamp(1.3rem, 0.818vw + 1.095rem, 1.75rem);
 	font-weight: 300;
 	font-family: Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -153,6 +154,25 @@ strong {
 	font-weight: 300;
 	font-size: 0.8rem;
 	margin: 0.13rem;
+}
+.github-link {
+	display: inline-block;
+	background-color: var(--head-color);
+	color: var(--bg-color);
+	padding: 0.3em 0.5em;
+	text-decoration: none;
+	border-radius: 0.5rem;
+	font-size: 0.8rem;
+	font-weight: 400;
+	margin: 1rem 0;
+	transition: transform 0.2s ease;
+}
+
+.github-link:hover {
+	transform: scale(1.1);
+	background-color: var(--bg-color);
+	color: var(--head-color);
+	border: 1px solid var(--head-color);
 }
 
 /* ------CONTACT PAGE-------- */
