--- a/src/App.css
+++ b/src/App.css
@@ -124,8 +124,10 @@ strong {
 	padding: 1rem;
 	line-height: 130%;
 	text-align: center;
-
-	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	/* min-height: 100%; */
 }
 .card-container div {
 	margin: 1.3rem 0 0;
