Improving Css and added a swing effect to the logo picture

--- a/src/App.css
+++ b/src/App.css
@@ -41,34 +41,101 @@ strong {
 	flex-direction: column;
 	height: 100%;
 	max-width: 960px;
-	margin: 0 auto;
-	/* padding: 20px; */
 }
 /* NAVBAR */
 .menubar {
 	text-align: center;
-	margin: 20px 0;
-	padding: 0;
 	width: 200px;
 	height: auto;
 	overflow: auto;
 	position: fixed;
+	padding: 0.8rem 0;
+
 }
 
 .nav-picture {
 	width: 80px;
 	height: 80px;
-	margin: 0;
 	border-radius: 50%;
 	border: 2px solid var(--head-color);
+	margin: 0.8rem 0;
 }
+.swing {
+  -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 2;
+  animation-iteration-count: 2;
+}
+
+@-webkit-keyframes swing {
+  20% {
+    -webkit-transform: rotate3d(0, 0, 1, 15deg);
+    transform: rotate3d(0, 0, 1, 15deg);
+  }
+
+  40% {
+    -webkit-transform: rotate3d(0, 0, 1, -10deg);
+    transform: rotate3d(0, 0, 1, -10deg);
+  }
+
+  60% {
+    -webkit-transform: rotate3d(0, 0, 1, 5deg);
+    transform: rotate3d(0, 0, 1, 5deg);
+  }
+
+  80% {
+    -webkit-transform: rotate3d(0, 0, 1, -5deg);
+    transform: rotate3d(0, 0, 1, -5deg);
+  }
+
+  to {
+    -webkit-transform: rotate3d(0, 0, 1, 0deg);
+    transform: rotate3d(0, 0, 1, 0deg);
+  }
+}
+
+@keyframes swing {
+  20% {
+    -webkit-transform: rotate3d(0, 0, 1, 15deg);
+    transform: rotate3d(0, 0, 1, 15deg);
+  }
+
+  40% {
+    -webkit-transform: rotate3d(0, 0, 1, -10deg);
+    transform: rotate3d(0, 0, 1, -10deg);
+  }
+
+  60% {
+    -webkit-transform: rotate3d(0, 0, 1, 5deg);
+    transform: rotate3d(0, 0, 1, 5deg);
+  }
+
+  80% {
+    -webkit-transform: rotate3d(0, 0, 1, -5deg);
+    transform: rotate3d(0, 0, 1, -5deg);
+  }
+
+  to {
+    -webkit-transform: rotate3d(0, 0, 1, 0deg);
+    transform: rotate3d(0, 0, 1, 0deg);
+  }
+}
+
+
 .menulink {
 	display: block;
 	color: var(--head-color);
-	padding: 16px;
+	padding: 0.9rem;
 	text-decoration: none;
 	text-align: center;
 	overflow: auto;
+	margin: 0.2rem;
 }
 
 .menulink:hover {
