--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 /** @format */
 :root {
-	/* --bg-color: #30292f; */
 	--bg-color: #141e27;
-	/* --txt-color: #daddd8; */
 	--txt-color: #d5d1d1;
-
-	/* --head-color: #f0a202; */
 	--head-color: #fd7e14;
 	--card-color: #25313b;
 }
-
-body {
-	/* position: relative; */
-	box-sizing: border-box;
+* {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+}
+
+html {
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+	background-color: #111a20;
+	min-height: 100vh;
+}
+
+html::-webkit-scrollbar {
+	display: none;
+}
+body {
+	min-height: calc(100vh - 2rem);
+	border: 1rem solid #14110e;
 	background-color: var(--bg-color);
 	color: var(--txt-color);
-	font-size: 1rem;
-	font-size: clamp(0.8rem, 0.455vw + 0.886rem, 1rem);
-	line-height: clamp(1.3rem, 0.818vw + 1.095rem, 1.75rem);
+	font-size: clamp(1.03125rem, 1vw + 0.875rem, 1.1875rem);
+	line-height: clamp(1.5rem, 1.5vw + 1.25rem, 1.75rem);
 	font-weight: 300;
-	font-family: Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+		'Helvetica Neue', sans-serif;
 }
 h1,
 h2,
 h3 {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
-	border-bottom: 1px solid gray;
-	padding-bottom: 0.5em;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+		'Helvetica Neue', sans-serif;
 	color: var(--head-color);
 }
+h1 {
+	font-size: clamp(2rem, 3vw + 1rem, 4rem);
+	line-height: clamp(2.5rem, 3.5vw + 1rem, 4.5rem);
+}
+h2 {
+	font-size: clamp(1.75rem, 2.5vw + 1rem, 3.5rem);
+	line-height: clamp(2.25rem, 3vw + 1rem, 4rem);
+	margin-bottom: clamp(2.5rem, 3vw + 1.5rem, 3.5rem);
+}
+
+h3 {
+	font-size: clamp(1.5rem, 1.5vw + 1rem, 2rem);
+	line-height: clamp(2rem, 2.5vw + 1rem, 3.5rem);
+	 margin-bottom: clamp(1.5rem, 1.5vw + 0.8rem, 2rem);
+}
+p {
+	margin-bottom: clamp(1rem, 1vw + 0.8rem, 1.5rem);
+	text-indent: 2em;
+}
+
 strong {
 	color: var(--head-color);
 }
@@ -41,16 +67,16 @@ strong {
 	flex-direction: column;
 	height: 100%;
 	max-width: 960px;
+	margin: 0 auto;
+	padding-top: calc(1rem + 2vw);
 }
 /* NAVBAR */
 .menubar {
 	text-align: center;
 	width: 200px;
 	height: auto;
-	overflow: auto;
 	position: fixed;
-	padding: 0.8rem 0;
-
+	padding: 0.8rem;
 }
 
 .nav-picture {
@@ -61,72 +87,71 @@ strong {
 	margin: 0.8rem 0;
 }
 .swing {
-  -webkit-transform-origin: top center;
-  transform-origin: top center;
-  -webkit-animation-name: swing;
-  animation-name: swing;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: 2;
-  animation-iteration-count: 2;
+	-webkit-transform-origin: top center;
+	transform-origin: top center;
+	-webkit-animation-name: swing;
+	animation-name: swing;
+	-webkit-animation-duration: 3s;
+	animation-duration: 3s;
+	-webkit-animation-timing-function: ease-in-out;
+	animation-timing-function: ease-in-out;
+	/* -webkit-animation-iteration-count: 2;
+	animation-iteration-count: 2; */
 }
 
 @-webkit-keyframes swing {
-  20% {
-    -webkit-transform: rotate3d(0, 0, 1, 15deg);
-    transform: rotate3d(0, 0, 1, 15deg);
-  }
+	20% {
+		-webkit-transform: rotate3d(0, 0, 1, 15deg);
+		transform: rotate3d(0, 0, 1, 15deg);
+	}
 
-  40% {
-    -webkit-transform: rotate3d(0, 0, 1, -10deg);
-    transform: rotate3d(0, 0, 1, -10deg);
-  }
+	40% {
+		-webkit-transform: rotate3d(0, 0, 1, -10deg);
+		transform: rotate3d(0, 0, 1, -10deg);
+	}
 
-  60% {
-    -webkit-transform: rotate3d(0, 0, 1, 5deg);
-    transform: rotate3d(0, 0, 1, 5deg);
-  }
+	60% {
+		-webkit-transform: rotate3d(0, 0, 1, 5deg);
+		transform: rotate3d(0, 0, 1, 5deg);
+	}
 
-  80% {
-    -webkit-transform: rotate3d(0, 0, 1, -5deg);
-    transform: rotate3d(0, 0, 1, -5deg);
-  }
+	80% {
+		-webkit-transform: rotate3d(0, 0, 1, -5deg);
+		transform: rotate3d(0, 0, 1, -5deg);
+	}
 
-  to {
-    -webkit-transform: rotate3d(0, 0, 1, 0deg);
-    transform: rotate3d(0, 0, 1, 0deg);
-  }
+	to {
+		-webkit-transform: rotate3d(0, 0, 1, 0deg);
+		transform: rotate3d(0, 0, 1, 0deg);
+	}
 }
 
 @keyframes swing {
-  20% {
-    -webkit-transform: rotate3d(0, 0, 1, 15deg);
-    transform: rotate3d(0, 0, 1, 15deg);
-  }
+	20% {
+		-webkit-transform: rotate3d(0, 0, 1, 15deg);
+		transform: rotate3d(0, 0, 1, 15deg);
+	}
 
-  40% {
-    -webkit-transform: rotate3d(0, 0, 1, -10deg);
-    transform: rotate3d(0, 0, 1, -10deg);
-  }
+	40% {
+		-webkit-transform: rotate3d(0, 0, 1, -10deg);
+		transform: rotate3d(0, 0, 1, -10deg);
+	}
 
-  60% {
-    -webkit-transform: rotate3d(0, 0, 1, 5deg);
-    transform: rotate3d(0, 0, 1, 5deg);
-  }
+	60% {
+		-webkit-transform: rotate3d(0, 0, 1, 5deg);
+		transform: rotate3d(0, 0, 1, 5deg);
+	}
 
-  80% {
-    -webkit-transform: rotate3d(0, 0, 1, -5deg);
-    transform: rotate3d(0, 0, 1, -5deg);
-  }
+	80% {
+		-webkit-transform: rotate3d(0, 0, 1, -5deg);
+		transform: rotate3d(0, 0, 1, -5deg);
+	}
 
-  to {
-    -webkit-transform: rotate3d(0, 0, 1, 0deg);
-    transform: rotate3d(0, 0, 1, 0deg);
-  }
+	to {
+		-webkit-transform: rotate3d(0, 0, 1, 0deg);
+		transform: rotate3d(0, 0, 1, 0deg);
+	}
 }
-
 
 .menulink {
 	display: block;
@@ -134,7 +159,6 @@ strong {
 	padding: 0.9rem;
 	text-decoration: none;
 	text-align: center;
-	overflow: auto;
 	margin: 0.2rem;
 }
 
@@ -152,13 +176,12 @@ strong {
 }
 /* SINGLE PAGES BODY */
 .content {
-	/* border-left: 1px solid #f0a202; */
-	border-width: 1px;
+	border-width: 2px;
 	border-style: solid;
-	border-image: linear-gradient(#30292f, var(--head-color), #30292f) 1 0 0 1;
+	border-image: linear-gradient(#30292f, var(--head-color), #30292f) 0 0 0 1;
 	margin-left: 200px;
-	margin-bottom: 3rem;
-	padding: 1px 0.7rem;
+	margin-bottom: calc(1rem + 2vw);
+	padding: 0 1rem;
 }
 
 /* HOME CONTENT */
@@ -168,10 +191,14 @@ strong {
 	line-height: clamp(2.438rem, 2.886vw + 1.716rem, 4.025rem);
 	font-weight: 900;
 	text-align: center;
+	margin-bottom: clamp(2.5rem, 3vw + 1.5rem, 3.5rem);
 }
 .quote strong {
 	color: var(--head-color);
 }
+/* .home-content p {
+	text-indent: 2em;
+} */
 
 /* PROJECTS PAGE */
 /* Grid container */
@@ -194,7 +221,6 @@ strong {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	/* min-height: 100%; */
 }
 .card-container div {
 	margin: 1.3rem 0 0;
@@ -204,7 +230,6 @@ strong {
 }
 
 .card-container i {
-	/* border: 1px solid yellow; */
 	color: var(--head-color);
 	position: relative;
 	top: 0.2rem;
@@ -234,11 +259,9 @@ strong {
 	font-size: 0.8rem;
 	font-weight: 400;
 	margin: 1rem 0;
-	transition: transform 0.2s ease;
 }
 
 .github-link:hover {
-	transform: scale(1.1);
 	background-color: var(--bg-color);
 	color: var(--head-color);
 	border: 1px solid var(--head-color);
@@ -259,7 +282,6 @@ strong {
 	justify-content: space-evenly;
 	margin: 3rem 0;
 	padding: 0;
-	/* border: 1px solid yellow; */
 }
 
 .contact-container ul li {
@@ -295,8 +317,6 @@ strong {
 	text-align: center;
 	border-radius: 6px;
 	padding: 0.7rem;
-
-	/* Position the tooltip */
 	position: absolute;
 	z-index: 1;
 	left: -4rem;
@@ -323,24 +343,32 @@ strong {
 	.nav-picture {
 		display: none;
 	}
-	/* .menulink {
-		float: left;
-	} */
+
 	.content {
 		margin-left: 0;
 		border: none;
 	}
 }
-@media screen and (max-width: 375px) {
+
+@media screen and (max-width: 445px) {
+	body {
+		border: none;
+	}
+	.app-container {
+		padding: 0;
+	}
 	.menubar {
 		width: 100%;
 		display: block;
 	}
-	.menulink {
+	/* .menulink {
 		text-align: center;
 		float: none;
-	}
+	} */
 	.content {
-		text-align: center;
+		text-align: left;
+	}
+	.quote {
+		margin: 1rem auto;
 	}
 }
