--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 	--txt-color: #d5d1d1;
 	--head-color: #fd7e14;
 	--card-color: #25313b;
+	--frame-color:#121b23;
 }
 * {
 	margin: 0;
@@ -14,7 +15,7 @@
 html {
 	scrollbar-width: none;
 	-ms-overflow-style: none;
-	background-color: #111a20;
+	background-color: var(--frame-color);
 	min-height: 100vh;
 }
 
@@ -23,14 +24,43 @@ html::-webkit-scrollbar {
 }
 body {
 	min-height: calc(100vh - 2rem);
-	border: 1rem solid #14110e;
+	border-inline: 1rem solid var(--frame-color);
 	background-color: var(--bg-color);
 	color: var(--txt-color);
+	margin: 1rem 0;
 	font-size: clamp(1.03125rem, 1vw + 0.875rem, 1.1875rem);
 	line-height: clamp(1.5rem, 1.5vw + 1.25rem, 1.75rem);
 	font-weight: 300;
 	font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 		'Helvetica Neue', sans-serif;
+}
+.horizontal-border {
+	position: fixed;
+	left: 0;
+	width: 100%;
+	height: 1rem;
+	background-color: var(--frame-color);
+	z-index: 1000;
+}
+
+.horizontal-border-top {
+	position: fixed;
+	left: 0;
+	width: 100%;
+	height: 1rem;
+	background-color: var(--frame-color);
+	z-index: 1000;
+	top: 0;
+}
+
+.horizontal-border-bottom {
+	position: fixed;
+	left: 0;
+	width: 100%;
+	height: 1rem;
+	background-color: var(--frame-color);
+	z-index: 1000;
+	bottom: 0;
 }
 h1,
 h2,
@@ -52,7 +82,7 @@ h2 {
 h3 {
 	font-size: clamp(1.5rem, 1.5vw + 1rem, 2rem);
 	line-height: clamp(2rem, 2.5vw + 1rem, 3.5rem);
-	 margin-bottom: clamp(1.5rem, 1.5vw + 0.8rem, 2rem);
+	margin-bottom: clamp(1.5rem, 1.5vw + 0.8rem, 2rem);
 }
 p {
 	margin-bottom: clamp(1rem, 1vw + 0.8rem, 1.5rem);
@@ -187,8 +217,8 @@ strong {
 /* HOME CONTENT */
 /* Blockquote */
 .quote {
-	font-size: clamp(1.875rem, 1.818vw + 1.42rem, 2.875rem);
-	line-height: clamp(2.438rem, 2.886vw + 1.716rem, 4.025rem);
+	font-size: clamp(2.5rem, 2.5vw + 1.8rem, 3.5rem);
+	line-height: clamp(3rem, 3vw + 2rem, 4.5rem);
 	font-weight: 900;
 	text-align: center;
 	margin-bottom: clamp(2.5rem, 3vw + 1.5rem, 3.5rem);
@@ -196,9 +226,6 @@ strong {
 .quote strong {
 	color: var(--head-color);
 }
-/* .home-content p {
-	text-indent: 2em;
-} */
 
 /* PROJECTS PAGE */
 /* Grid container */
@@ -206,65 +233,95 @@ strong {
 .projects-section-container {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
-	column-gap: 0.7rem;
+	gap: clamp(0.7rem, 1vw + 0.5rem, 1.2rem);
 	justify-content: flex-start;
 	min-height: fit-content;
 }
 .card-container {
+	margin-top: 1rem;
 	list-style: none;
-	font-size: 0.95rem;
 	background-color: var(--card-color);
-	border-radius: 7px;
-	padding: 1rem;
-	line-height: 130%;
-	text-align: center;
+	border-radius: clamp(0.4rem, 0.5vw + 0.3rem, 0.7rem);
+	padding: clamp(0.8rem, 1vw + 0.5rem, 1.5rem);
+	line-height: clamp(1.3, 1vw + 1.2, 1.5);
+	font-size: clamp(0.875rem, 0.8vw + 0.8rem, 1rem);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	gap: clamp(0.5rem, 0.8vw + 0.3rem, 1rem);
+	border: 1px solid #fd7d147e;
 }
-.card-container div {
-	margin: 1.3rem 0 0;
-}
+
 .card-container a {
 	text-decoration: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0.5rem;
+}
+.card-container h3 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 0.5rem;
+	margin: 0;
+	width: 100%;
 }
 
 .card-container i {
 	color: var(--head-color);
-	position: relative;
-	top: 0.2rem;
-	left: 0.4rem;
+	font-size: clamp(0.9rem, 0.8vw + 0.7rem, 1.2rem);
+	position: static;
+	margin: 0;
 }
-.card-container .subtitle {
-	font-size: 0.7rem;
-	margin-top: -1rem;
+
+.subtitle {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	margin: -1rem 0 0.5rem;
+	padding: 0.2rem;
+	color: var(--txt-color);
+	opacity: 0.8;
+	letter-spacing: 0.5px;
+}
+.proj-description {
+	margin: 0;
+}
+.tags-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 0.3rem;
+	padding: 0.3rem;
 }
 .tag {
-	display: inline-block;
-	border-radius: 3px;
+	display: inline-flex;
+	align-items: center;
+	border-radius: 4px;
 	padding: 0.2em 0.5em;
 	background: var(--bg-color);
 	color: var(--head-color);
-	font-weight: 300;
-	font-size: 0.8rem;
-	margin: 0.13rem;
+	font-weight: 400;
+	font-size: clamp(0.65rem, 0.5vw + 0.7rem, 0.8rem);
+	border: 1px solid #fd7d147f;
+	transition: all 0.2s ease-in-out;
 }
 .github-link {
-	display: inline-block;
-	background-color: var(--head-color);
-	color: var(--bg-color);
+	color: var(--head-color);
 	padding: 0.3em 0.5em;
 	text-decoration: none;
-	border-radius: 0.5rem;
-	font-size: 0.8rem;
-	font-weight: 400;
-	margin: 1rem 0;
+	font-size: inherit;
+	font-weight: 600;
+	margin: 0.5rem 0;
+	cursor: pointer;
 }
 
 .github-link:hover {
 	background-color: var(--bg-color);
-	color: var(--head-color);
-	border: 1px solid var(--head-color);
+	border-inline-start: 4px solid var(--head-color);
+	border-radius: 0.3em;
+	font-weight: 300;
 }
 
 /* ------CONTACT PAGE-------- */
@@ -329,13 +386,20 @@ strong {
 }
 /* RESPONSIVE SECTION */
 @media screen and (max-width: 700px) {
+	body {
+		margin: 0;
+	}
+
+	.app-container {
+		padding-top: 1rem;
+	}
 	.menubar {
 		width: 100%;
 		height: auto;
 		position: relative;
 		display: flex;
 		justify-content: center;
-		margin: 0.5em 0;
+		margin-bottom: 2.7rem;
 		border-width: 1px;
 		border-style: solid;
 		border-image: linear-gradient(90deg, #30292f, var(--head-color), #30292f) 0 1 100%;
@@ -354,21 +418,25 @@ strong {
 	body {
 		border: none;
 	}
+
 	.app-container {
 		padding: 0;
 	}
 	.menubar {
 		width: 100%;
 		display: block;
+		margin-bottom: 2.5rem;
 	}
-	/* .menulink {
-		text-align: center;
-		float: none;
-	} */
 	.content {
 		text-align: left;
 	}
 	.quote {
-		margin: 1rem auto;
+		margin: 0 auto 3rem;
+	}
+	.horizontal-border {
+		display: none;
+	}
+	.horizontal-border-top {
+		display: none;
 	}
 }
