--- a/src/App.css
+++ b/src/App.css
@@ -400,12 +400,11 @@ strong {
 /* Marquee component for Home Page */
 .tech-marquee-container {
 	position: relative;
-	padding: 2rem 0;
-	margin: 3rem 0;
+	padding: 1rem 0;
+	margin: 0 2rem 2rem;
 	display: flex;
 	flex-direction: column;
 	gap: 0.6rem;
-	
 }
 
 .tech-item {
@@ -415,13 +414,10 @@ strong {
 	padding: clamp(0.5rem, 1vw + 0.3rem, 2rem);
 	font-size: clamp(1rem, 1.5vw + 0.5rem, 1.5rem);
 	font-family: Verdana, sans-serif;
-	opacity: 0.6;
-	transition: opacity 0.3s ease;
-	/* background: var(--card-color); */
+
 }
 .tech-item:hover {
 	opacity: 1;
-
 }
 .tech-marquee-container::before,
 .tech-marquee-container::after {
@@ -637,21 +633,24 @@ strong {
 /* Tablets grandes y laptops pequeñas */
 @media screen and (max-width: calc(1024 * 1px)) {
 	.hero-container {
-		flex-direction: column;
-		gap: clamp(1rem, 2vw, 2rem);
-		margin: 0 auto;
+		flex-direction: row;
+		padding: 0;
+		margin-top: 1.5rem;
 	}
 
 	.hero-illustration {
-		order: 1;
-		margin: 0;
+		order: 2;
+		width: clamp(250px, 30vw, 350px);
 	}
 
 	.quote {
-		order: 2;
+		order: 1;
 		text-align: center;
+		text-wrap: balance;
 		flex: 1;
-		margin: 1.5rem auto 2.5rem;
+		max-width: 60%;
+		font-size: clamp(1.8rem, 3vw + 1rem, 2.5rem);
+		line-height: clamp(2.2rem, 3vw + 1rem, 3rem);
 	}
 	.content {
 		margin-left: 13rem;
@@ -661,6 +660,30 @@ strong {
 
 /* Tablets y móviles grandes */
 @media screen and (max-width: calc(768 * 1px)) {
+	body {
+		margin: 0;
+		border: none;
+	}
+	.hero-container {
+		flex-direction: column;
+		gap: clamp(1rem, 2vw, 1.5rem);
+		padding: clamp(0.5rem, 1vw, 1rem);
+	}
+
+	.hero-illustration {
+		width: clamp(180px, 40vw, 250px);
+		margin: 0 auto;
+		order: 1;
+	}
+
+	.quote {
+		max-width: 100%;
+		text-align: center;
+		font-size: clamp(1.5rem, 3.5vw + 1rem, 3rem);
+		line-height: clamp(2rem, 2.5vw + 1rem, 2.5rem);
+		margin: 1rem auto;
+		order: 2;
+	}
 	.desktop-menu,
 	.sidebar {
 		display: none;
@@ -674,26 +697,33 @@ strong {
 	.mobile-nav {
 		display: block;
 	}
-
-	.quote {
-		margin: 1.5rem auto 2.5rem;
-	}
 	.horizontal-border-top,
 	.horizontal-border-bottom {
 		display: none;
 	}
 
-	body {
-		margin: 0;
-		border: none;
-	}
-	.tech-marquee-container{
-		margin: 1rem 0;
+	.tech-marquee-container {
+		margin: 2rem ;
 	}
 }
 
 /* Móviles */
 @media screen and (max-width: calc(480 * 1px)) {
+
+	.hero-container {
+		gap: 1rem;
+		padding: 0.5rem;
+	}
+
+	.hero-illustration {
+		width: clamp(150px, 50vw, 200px);
+	}
+
+	.quote {
+		font-size: clamp(1.6rem, 2vw + 1rem, 3rem);
+		line-height: clamp(1.8rem, 2vw + 1rem, 2.2rem);
+		margin: 0.5rem auto;
+	}
 	h2 {
 		font-size: 2.5rem;
 		line-height: 1.2;
@@ -707,9 +737,6 @@ strong {
 		font-size: clamp(1.1rem, 1vw + 1rem, 1.4rem);
 		line-height: clamp(1.7rem, 1.5vw + 1.35rem, 1.95rem);
 	}
-	.app-container {
-		padding-top: 0.5rem;
-	}
 
 	.menubar {
 		padding: 0.5rem;
@@ -720,10 +747,6 @@ strong {
 		width: 100%;
 		margin: 0.1rem 0;
 	}
-	.quote {
-		margin: 0.6rem auto 1.2rem;
-	}
-
 	.projects-section-container {
 		grid-template-columns: 1fr;
 	}
